# fastapi-hands-on

./: README.md  pyproject.toml  requirements.txt
part-1-pydantic-why-and-how/: 1_type_hints.py  2_using_type_hints.py  3_using_pydantic.py
part-2-fastapi-basics/: 1_first_steps.py  2_dep_inj.py
part-3-fastapi-full-example/: README.md
part-3-fastapi-full-example/app/api/: auth.py  main.py  middlewares.py
part-3-fastapi-full-example/app/api/routers/: __init__.py  resource1.py  resource2.py  token.py
part-3-fastapi-full-example/app/common/: db.py  settings.py
part-3-fastapi-full-example/app/migrations/: alembic.ini  env.py  script.py.mako
part-3-fastapi-full-example/app/migrations/versions/: 2024_12_01_213650_add_resource2.py
part-3-fastapi-full-example/app/models/: __init__.py  base.py  resource1.py  resource2.py
part-3-fastapi-full-example/app/schemas/: resource1.py  resource2.py
part-3-fastapi-full-example/src/api/: main.py
part-3-fastapi-full-example/src/api/routers/: __init__.py  route1.py  route2.py
part-3-fastapi-full-example/src/common/: settings.py
part-3-fastapi-full-example/src/models/: resource1.py
part-3-fastapi-full-example/src/schemas/: resource1.py
part-3-fastapi-full-example/tests/: conftest.py  test_resource1.py
