[project]
name = "fastapi-hands-on"
version = "0.1.0"
description = "Content for talk on FastAPI's real world usage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.2",
    "pytest>=8.3.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg[binary,pool]>=3.2.3",
]
